Fixing scrollbar problems in IE9 when box-model is border-box.

--- a/src/deflex/Box.less
+++ b/src/deflex/Box.less
@@ -1,5 +1,6 @@
 .deflex-Box
 {
+	box-sizing: content-box; // border-box causes scrollbar problems in IE9
 	position: absolute !important;
 	top: 0;
 	left: 0;
